[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/icons/status_success.svg" type="Texture" id=1]
[ext_resource path="res://source/components/status.gd" type="Script" id=2]
[ext_resource path="res://assets/icons/status_warning.svg" type="Texture" id=3]
[ext_resource path="res://assets/icons/status_error.svg" type="Texture" id=4]
[ext_resource path="res://assets/themes/main_theme.tres" type="Theme" id=5]

[node name="status" type="HBoxContainer"]
margin_right = 55.0
margin_bottom = 16.0
theme = ExtResource( 5 )
custom_constants/separation = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="."]
margin_right = 52.0
margin_bottom = 22.0
text = "default"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon_success" type="TextureRect" parent="."]
margin_left = 52.0
margin_top = 3.0
margin_right = 68.0
margin_bottom = 19.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon_warn" type="TextureRect" parent="."]
visible = false
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon_error" type="TextureRect" parent="."]
visible = false
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
